# AdaFlow

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  README_EN.md  README_zh.md  env.sh  meta.yaml
.github/workflows/: dev.yml  release.yaml
docker/: adaflow-builder-cpu.dockerfile  adaflow-builder-cuda.dockerfile  adaflow-conda-build.dockerfile  adaflow-cpu-devel-arm64.dockerfile  adaflow-cpu-devel.dockerfile  adaflow-devel-cpu.dockerfile  adaflow-devel-cuda.dockerfile  adaflow-runtime-cpu.dockerfile  adaflow-runtime-cuda.dockerfile  build_push_all.sh
docs/: plugin.md  python_extension_guide.md
docs/contribution_guide/: build_from_source.md  clion_setup.md  coding_guidelines.md  releasing.md
docs/user_guide/: built_in_elements.md  cli.md  composing_a_pipeline.md  composing_a_pipeline_EN.md  concept.md  docker_images.md  installation.md  pipeline_schema.json  python_extension.md  start_a_pipeline.md  subplugin_api.md  task_schema.json
docs/user_guide/tutorials/: basic_tutorial_1.md  basic_tutorial_1_EN.md  basic_tutorial_2.md  basic_tutorial_2_EN.md  basic_tutorial_3.md  basic_tutorial_3_EN.md  basic_tutorial_4.md  basic_tutorial_4_EN.md
modules/adaflow-gst-plugin/: CMakeLists.txt
modules/adaflow-gst-plugin/ann/trt/: trt_infer.cpp  trt_infer.h
modules/adaflow-gst-plugin/data/: av_data_frame.h  av_data_packet.h
modules/adaflow-gst-plugin/elements/: common.c  common.h  flow_frame_convert.c  flow_frame_convert.h  flow_tensor_aggregate.c  flow_tensor_aggregate.h  flow_tensor_compositor.c  flow_tensor_compositor.h  flow_tensor_convert.c  flow_tensor_convert.h  flow_tensor_decode.cpp  flow_tensor_decode.h  flow_tensor_resize.cpp  flow_tensor_resize.h  flow_tensor_transform.c  flow_tensor_transform.h  flow_trt_infer.cpp  flow_trt_infer.h  flow_video_aggregate.c  flow_video_aggregate.h  meta_tensor.cpp  meta_tensor.h
modules/adaflow-gst-plugin/metadata/: flow_json_meta.cc  flow_json_meta.h
modules/adaflow-gst-plugin/python/: flow_c2python.py  flow_metadata_sink.py  flow_modelscope_pipeline.py  flow_python_extension.py  flow_python_metadata_aggregate.py
modules/adaflow-gst-plugin/register/: adaflow.c  adaflow.cpp
modules/adaflow-gst-plugin/subplugin/: flow_c_extension.c  flow_c_extension.h  flow_extension_common.h  flow_extension_util.c  flow_extension_util.h
modules/adaflow-gst-plugin/subplugin/filter_plugins/: CMakeLists.txt  flow_filter_template.cc  flow_filter_template.h  flow_filter_yolodetect.cc  flow_filter_yolodetect.h  flow_subplugin_api.cc  flow_subplugin_api.h  flow_subplugin_base_class.h  run.sh
modules/adaflow-gst-plugin/subplugin/src_plugins/: flow_subplugin.c  flow_subplugin.h
modules/adaflow-python/: LICENSE  requirements-dev.txt  requirements.txt  setup.cfg
modules/adaflow-python/src/adaflow/: __init__.py  setup.py
modules/adaflow-python/src/adaflow/av/: utils.py
modules/adaflow-python/src/adaflow/av/cli/: README.md  cli.py  init.py  launch.py
modules/adaflow-python/src/adaflow/av/data/: av_data_frame.py  av_data_packet.py
modules/adaflow-python/src/adaflow/av/metadata/: flow_json_meta.py
modules/adaflow-python/src/adaflow/av/pipeline/: __init__.py
modules/adaflow-python/src/adaflow/av/serving/: http_server.py
modules/adaflow-python/src/adaflow/cli/: base.py  cli.py  init.py  launch.py  serve.py
modules/adaflow-python/test/: core_video_pipelines_test.py  detection_pipelines_test.py  gstreamer_dialect_test.py  onnxmodel_pipelines_test.py  pipeline_composer_test.py
modules/adaflow-python/test/core_video_repo/pipelines/adaptive_io_sample/: pipeline.json
modules/adaflow-python/test/core_video_repo/pipelines/mp4_mux/: pipeline.json
modules/adaflow-python/test/core_video_repo/tasks/: generate_test_mp4.json
modules/adaflow-python/test/detection_repo/extension/: break_in_det_postprocess.py  mot_counting_postprocess.py  real_detector_vis.py  reid_person_postprocess.py  smoke_det_postprocess.py  test_detection.sh
modules/adaflow-python/test/detection_repo/pipelines/break_in/: pipeline.json
modules/adaflow-python/test/detection_repo/pipelines/mot_counting/: pipeline.json
modules/adaflow-python/test/detection_repo/pipelines/real_detector/: pipeline.json
modules/adaflow-python/test/onnx_model_repo/extension/: damoyolo_postprocess.py  obj_detection_postprocess.py
modules/flow-gst-plugin/: CMakeLists.txt
modules/flow-gst-plugin/elements/: flow_python_extension.c  flow_python_extension.h  flow_video_aggregate.c  flow_video_aggregate.h
modules/flow-gst-plugin/flow-api/: README.md  setup.cfg
modules/flow-gst-plugin/flow-api/src/flow/: __init__.py
modules/flow-gst-plugin/flow-api/src/flow/baseprocess/: base_postprocess.py
modules/flow-gst-plugin/flow-api/src/flow/metadata/: flow_json_meta.py
modules/flow-gst-plugin/flow-api/src/flow/register/: constants.py
modules/flow-gst-plugin/flow-api/src/flow/utils/: __init__.py  utils.py  video_frame.py
modules/flow-gst-plugin/flow-detection-samples/: test_detection.sh
modules/flow-gst-plugin/flow-detection-samples/postprocess/: break_in_det_postprocess.py
modules/flow-gst-plugin/flow-metadata/: flow_json_meta.cpp  flow_json_meta.h
modules/flow-gst-plugin/python/: flow_mass_model_plugin.py  flow_mass_model_postprocess_plugin.py  flow_metadata_aggregator_plugin.py  flow_metadata_sink.py  flow_modelscope_pipeline.py  flow_python_extension.py  flow_python_metadata_aggregate.py
modules/flow-gst-plugin/register/: adaflow.c
modules/flow-python/adaflow-api/: README.md  setup.cfg
modules/flow-python/adaflow-python/: requirements.txt  setup.cfg
modules/flow-python/adaflow-python/test/: core_video_pipelines_test.py  detection_pipelines_test.py  gstreamer_dialect_test.py  pipeline_composer_test.py  pipeline_launcher_test.py
modules/flow-python/adaflow-samples/: README.md  setup.cfg
modules/flow-python/adaflow-samples/detection/: test_detection.sh
modules/flow-python/adaflow-samples/detection/data/: break_in_count_deploy.yaml
modules/flow-python/adaflow-samples/detection/postprocess/: break_in_det_postprocess.py  reid_person_postprocess.py
(+81 files in other folders)
