[metadata]
name = flow-api
version = attr: flow.__version__
author = You
author_email = your@email.address
url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3


[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src
install_requires =
    numpy
    torch


[options.packages.find]
where=src


